fixes video page1

--- a/TP3/html/page1.html
+++ b/TP3/html/page1.html
@@ -19,8 +19,8 @@
 			<section id="animLast">
 				<h1>Um dia @ DEI</h1>
 			</section>
-			<video controls>
-				<source src="../resources/Video/video.mp4">
+			<video id="video" controls>
+				<source src="../resources/video/video.mp4">
 			</video>			
 		</main>
 	</body>
